force-app/main/default/objects/PIR_ParticipantStatusWorflowStep__mdt/PIR_ParticipantStatusWorflowStep__mdt.object-meta.xml
<CustomObject>
    <description>Metadata for the status chart in PI revamp</description>
    <label>PIR_ParticipantStatusWorflowStep</label>
    <pluralLabel>PIR_ParticipantStatusWorflowStep</pluralLabel>
</CustomObject>