force-app/main/default/objects/PIR_ParticipantStatusWorflowStep__mdt/fields/Additional_Notes_for_Satuses__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes_for_Satuses__c</fullName>
    <label>Additional Notes for Satuses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>