force-app/main/default/objects/PIR_ParticipantStatusWorflowStep__mdt/fields/Default_Description__c.field-meta.xml
<CustomField>
    <fullName>Default_Description__c</fullName>
    <label>Default Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>