force-app/main/default/objects/PIR_ParticipantStatusWorflowStep__mdt/fields/Failure_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Failure_Criteria__c</fullName>
    <label>Failure Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>