force-app/main/default/objects/PIR_ParticipantStatusWorflowStep__mdt/fields/History_Label__c.field-meta.xml
<CustomField>
    <fullName>History_Label__c</fullName>
    <label>History Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>