force-app/main/default/objects/PIR_ParticipantStatusWorflowStep__mdt/fields/In_progress_criteria__c.field-meta.xml
<CustomField>
    <fullName>In_progress_criteria__c</fullName>
    <label>In progress criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>