force-app/main/default/objects/PIR_ParticipantStatusWorflowStep__mdt/fields/InitialVisit__c.field-meta.xml
<CustomField>
    <fullName>InitialVisit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>InitialVisit</label>
    <type>Checkbox</type>
</CustomField>