force-app/main/default/objects/PIR_ParticipantStatusWorflowStep__mdt/fields/List_of_Statuses__c.field-meta.xml
<CustomField>
    <fullName>List_of_Statuses__c</fullName>
    <label>List of Statuses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>