force-app/main/default/objects/PIR_ParticipantStatusWorflowStep__mdt/fields/Success_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Success_Criteria__c</fullName>
    <label>Success Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>